# wake-tests

./: .gitignore  README.md  pyproject.toml
examples/erc20/: .gitignore  README.md  package-lock.json  package.json  wake.toml
examples/erc20/contracts/: BoringERC20.sol  OZERC20.sol  PureERC20.sol  SoladyERC20.sol  SolmateERC20.sol
examples/erc20/tests/: test_default.py  test_fuzz.py
src/wake_tests/erc20/: IERC20.py  __init__.py  differential.py  fuzz.py  mock.py  suite_abc.py  suite_abi.py  suite_desirable.py  suite_fingerprint.py  suite_minimal.py  suite_recommended.py  utils.py
