[tool.poetry]
name = "eth-wake-tests"
version = "0.1.1"
description = "Generic tests for common Ethereum standards utilizing Wake."
license = "ISC"
authors = ["Ackee Blockchain"]
readme = "README.md"
homepage = "https://ackeeblockchain.com"
repository = "https://github.com/Ackee-Blockchain/wake-tests"
# documentation = "https://ackeeblockchain.com/wake/docs/latest"
keywords = [
    "ethereum",
    "solidity",
    "security",
    "testing",
    "development",
    "framework",
    "audit",
]
packages = [
    { include = "wake_tests", from="src" },
]

[tool.poetry.dependencies]
python = "^3.8"
eth-wake = "^4.3.2"

[tool.poetry.extras]
dev = ["black"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38"]

[tool.pyright]
include = ["**/*.py"]
exclude = ["examples"]
pythonVersion = "3.8"
pythonPlatform = "All"

[tool.isort]
profile = "black"
skip_gitignore = true
